RESOLVED FIXED311762
REGRESSION(309943@main): No drag event fired when pasteboard has only custom data type
https://bugs.webkit.org/show_bug.cgi?id=311762
Summary REGRESSION(309943@main): No drag event fired when pasteboard has only custom ...
Abrar Rahman Protyasha
Reported 2026-04-08 14:54:24 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2026-04-08 15:12:46 PDT
EWS
Comment 2 2026-04-09 00:49:07 PDT
Committed 310833@main (9df7894d2af3): <https://commits.webkit.org/310833@main> Reviewed commits have been landed. Closing PR #62302 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.